# rustrelay

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  deploy.bat  deploy.ps1  deploy_backend.ps1  deploy_portable.ps1  docker-compose.yml  fly.toml  get_auth_url.ps1  git_push.ps1  just_deploy.ps1  master_deploy.ps1  open_chrome_github.bat  redeploy_frontend.ps1  render.yaml  run_backend_deploy.vbs  run_deploy.vbs  run_git_push.vbs  run_master_deploy.vbs  run_neon_setup.vbs  run_portable_deploy.vbs  run_redeploy.vbs  run_update_frontend.vbs  setup_neon_db.ps1  update_frontend_url.ps1
benches/: fanout.rs
migrations/: 001_initial.sql
scripts/: load_test.sh  setup_windows.bat
src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  metrics.rs  models.rs  ratelimit.rs  routes.rs
src/gateway/: handler.rs  heartbeat.rs  mod.rs  session.rs
src/presence/: broadcast.rs  mod.rs  tracker.rs
src/readstate/: cache.rs
src/router/: fanout.rs  mod.rs  redis_bridge.rs
tests/: gateway_integration.rs
web/: index.html
