[package]
name = "rustrelay"
version = "0.1.0"
edition = "2021"
description = "A high-performance real-time message routing & presence system inspired by Discord's architecture"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework + WebSockets
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Concurrent data structures
dashmap = "5"

# Redis
fred = { version = "9", features = ["subscriber-client"] }

# PostgreSQL
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid", "tls-rustls"] }

# Auth
jsonwebtoken = "9"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "1"
anyhow = "1"
rand = "0.8"
futures-util = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
tokio-tungstenite = "0.21"
reqwest = { version = "0.11", features = ["json"] }
criterion = { version = "0.5", features = ["async_tokio"] }
fake = { version = "2", features = ["derive"] }

[[bench]]
name = "fanout"
harness = false
